tekton/aks/azure-keyvault/azure-vault-tea-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tea-azure-kv
  labels:
    aadpodidbinding: azure-pod-identity-binding-selector 
    app: tea-azure-kv
spec:
  containers:
    - name: tea-azure-kv
      image: tdolby/experimental:tea-application-12.2008.3.0
      volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: spc-tea-keyvault
